# MaterialShare

./: README.md  main.py  notes.txt  pyproject.toml
april/: .material.py.swp  connector.py  dbuniversal.py  material.py  materials.py  notifications.py  user.py
blueprints/: api.py  index.py  login.py  profile.py  register.py  search.py
static/: cookies.js  gamelogic.js  gamestyle.css  style.css
static/css/: style.css
templates/: 404error.html  405error.html  500error.html  502error.html  art.html  credits.html  detail_search.html  forgotten-password.html  game.html  index.html  layout.html  login.html  materials.html  nwmSQL.html  profile.html  registre.html  sandbox.html  search_page.html  tutorial.html  upravit-vlozit.html
templates/auth/: forgotten-password.html  login.html  register.html
templates/errors/: 404error.html  405error.html  500error.html  502error.html
templates/materials/: material.html  materials.html  myMaterials.html  my_saved_Materials.html  searched_materials.html
templates/profile/: profile.html
