[tool.poetry]
name = "materialshare"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
flask-wtf = "^0.14.3"
mysql-connector = "^2.2.9"
python-dotenv = "^0.15.0"
discord-webhook = "^0.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
